log/build_2023-11-30_18-43-37/mypkg/stderr.log
  File "/home/zhang/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 11
    pub = node.create_subscription(Int16. "countup", cb, 10)
                                          ^
SyntaxError: invalid syntax

